--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gh-pages": "^2.2.0",
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
+    "react-instagram-embed": "^1.5.0",
     "react-scripts": "2.1.5",
     "serve": "^11.3.0",
     "travis": "^0.1.1",
