--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://wino6687.github.io/will-portfolio",
+  "homepage": "http://willmnorris.com",
   "dependencies": {
     "gh-pages": "^2.2.0",
     "react": "^16.8.3",
